--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,8 @@ project(vysmaw)
 set(vysmaw_VERSION_MAJOR 0)
 set(vysmaw_VERSION_MINOR 1)
 
+find_package(Verbs REQUIRED)
+find_package(RDMACM REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTHREAD2 REQUIRED gthread-2.0)
 
