Add comments to vys.conf

--- a/src/vys.conf
+++ b/src/vys.conf
@@ -1,3 +1,5 @@
 [vys]
 
+# multicast address for signal messages containing available spectrum metadata;
+# expected format is dotted quad IP address string
 signal_multicast_address = 224.0.0.100
