Revert "Move resolve_addr_timeout_ms from vysmaw to vys configuration"
This reverts commit 0582bdf252ae86fac7cb645194c6962e6c3b3e87.

--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -70,6 +70,9 @@ max_starvation_latency = 100
 # timeout, in milliseconds, to resolve InfiniBand/RDMA route
 resolve_route_timeout_ms = 1000
 
+# timeout, in milliseconds, to resolve InfiniBand/RDMA address
+resolve_addr_timeout_ms = 1000
+
 # timeout, in seconds, to determine data server inactivity
 inactive_server_timeout_sec = 43200
 
