Move -fno-short-enums compile flag to top level build file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,12 @@ set(
   ${CMAKE_MODULE_PATH}
   ${CMAKE_CURRENT_LIST_DIR}/cmake/Modules)
 
+set(CMAKE_C_FLAGS
+  "${CMAKE_C_FLAGS} -fno-short-enums")
+
+set(CMAKE_CXX_FLAGS
+  "${CMAKE_CXX_FLAGS} -fno-short-enums")
+
 add_subdirectory(src)
 add_subdirectory(py)
 add_subdirectory(examples)
