--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,12 @@ set(
   ${CMAKE_CURRENT_LIST_DIR}/cmake/Modules)
 
 set(CMAKE_C_FLAGS
-  "${CMAKE_C_FLAGS} -fno-short-enums -Ofast")
+  "${CMAKE_C_FLAGS} -fno-short-enums")
 set(CMAKE_C_FLAGS_DEBUG
   "${CMAKE_C_FLAGS_DEBUG} -fno-short-enums")
 
 set(CMAKE_CXX_FLAGS
-  "${CMAKE_CXX_FLAGS} -fno-short-enums -Ofast")
+  "${CMAKE_CXX_FLAGS} -fno-short-enums")
 set(CMAKE_CXX_FLAGS_DEBUG
   "${CMAKE_CXX_FLAGS_DEBUG} -fno-short-enums")
 
