Add warning about setting "single_spectrum_buffer_pool" to false

--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -12,6 +12,9 @@ spectrum_buffer_pool_size = 10485760
 
 # Maintain a single pool containing buffers sized to accommodate the expected
 # size of a spectrum.
+#
+# WARNING: setting this parameter to 'false' is not recommended at this time,
+# as the implementation in vysmaw is incomplete.
 single_spectrum_buffer_pool = true
 
 # The maximum expected size in bytes of a single spectrum that the client will
