--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -21,7 +21,7 @@ single_spectrum_buffer_pool = true
 # receive. Note that all spectra that exceed this size will not be sent to the
 # client, regardless of the result of the client filter predicate. This value is
 # ignored unless 'single_spectrum_buffer_pool' is true.
-max_spectrum_buffer_size = 1048576
+max_spectrum_buffer_size = 8192
 
 # Size of memory region for storing signal messages carrying spectrum metadata
 # sent from all active CBE nodes. The memory region is allocated and registered
