--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: c
-script: cmake
+script: cmake .
 compiler: gcc
 python:
   - "2.7"
@@ -8,4 +8,5 @@ sudo: required
 before_install:
   - test -n $CC && unset CC
   - test -n $CXX && unset CXX
-  - sudo apt-get install python python-dev python3 python3-dev
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq python python-dev python3 python3-dev
