--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,13 @@ sudo: required
 before_install:
   - test -n $CC && unset CC
   - test -n $CXX && unset CXX
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq python python-dev python3 python3-dev
+addons:
+  apt:
+    packages:
+      - cmake
+      - python
+      - python-dev
+      - python3
+      - python3-dev
+      - cython
+      - cython3
