--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ before_install:
 addons:
   apt:
     packages:
-      - cmake
       - python
       - python-dev
       - cython
+install:
+  - wget https://cmake.org/files/v3.7/cmake-3.7.1.tar.gz
+  - tar zxf cmake-3.7.1.tar.gz
+  - cd cmake-3.7.1 && ./configure && make && make install
