--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ addons:
       - python
       - python-dev
       - cython
-      - ca-certificates
 install:
-  - wget https://cmake.org/files/v3.7/cmake-3.7.1.tar.gz
+  - wget http://cmake.org/files/v3.7/cmake-3.7.1.tar.gz
   - tar zxf cmake-3.7.1.tar.gz
   - cd cmake-3.7.1 && ./configure && make && make install
