--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ addons:
       - python-dev
       - cython
 install:
-  - wget http://cmake.org/files/v3.7/cmake-3.7.1.tar.gz
+  - wget --no-check-certificate https://cmake.org/files/v3.7/cmake-3.7.1.tar.gz
   - tar zxf cmake-3.7.1.tar.gz
   - cd cmake-3.7.1 && ./configure && make && make install
