Revert "Use http url to get cmake"
This reverts commit 1af52febc9756edb135311b0813e0d5237b980a3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ addons:
       - python
       - python-dev
       - cython
+      - ca-certificates
 install:
-  - wget http://cmake.org/files/v3.7/cmake-3.7.1.tar.gz
+  - wget https://cmake.org/files/v3.7/cmake-3.7.1.tar.gz
   - tar zxf cmake-3.7.1.tar.gz
   - cd cmake-3.7.1 && ./configure && make && make install
