Revert "Remove sudo dependency in travis"
This reverts commit d090148eb94604de0a7d86095f4db2536636c164.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ compiler: gcc
 python:
   - "2.7"
   - "3.4"
+sudo: required
 before_install:
   - test -n $CC && unset CC
   - test -n $CXX && unset CXX
