Add install target
Target to install libraries and include files only. No meaningful versioning.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,3 +46,14 @@ target_link_libraries(vysmaw
   ${GTHREAD2_LIBRARIES}
   ${VERBS_LIBRARY}
   ${RDMACM_LIBRARY})
+
+# install rule
+install(TARGETS vys vysmaw
+  LIBRARY DESTINATION lib
+  CONFIGURATIONS Release
+  PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE
+              GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+install(FILES vys.h vysmaw.h
+  DESTINATION include
+  CONFIGURATIONS Release
+  PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)
