Add cython artifacts to install target
Installs pxd and library files into Python sub-directory of install directory as
the "vysmaw" module.

--- a/py/CMakeLists.txt
+++ b/py/CMakeLists.txt
@@ -4,6 +4,24 @@ cmake_policy(SET CMP0057 NEW)
 include(UseCython)
 include(FindPythonExtensions)
 
+# use, i.e. don't skip the full RPATH for the build tree
+set(CMAKE_SKIP_BUILD_RPATH FALSE)
+
+# when building, don't use the install RPATH already (but later on when
+# installing)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+
+# add the automatically determined parts of the RPATH which point to directories
+# outside the build tree to the install RPATH
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+# the RPATH to be used when installing, but only if it's not a system directory
+list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES
+  "${CMAKE_INSTALL_PREFIX}/lib" isSystemDir)
+if("${isSystemDir}" STREQUAL "-1")
+  set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+endif("${isSystemDir}" STREQUAL "-1")
+
 find_package(Cython)
 add_cython_target(cy_vysmaw cy_vysmaw.pyx)
 
@@ -14,3 +32,23 @@ target_link_libraries(cy_vysmaw vysmaw)
 python_extension_module(cy_vysmaw)
 target_compile_options(cy_vysmaw PRIVATE
   -fno-short-enums)
+
+execute_process(
+  COMMAND "${PYTHON_EXECUTABLE}" -c "if True:
+    from distutils import sysconfig as sc
+    print(sc.get_python_lib(prefix='', plat_specific=True))"
+  OUTPUT_VARIABLE PYTHON_SITE
+  OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+install(
+  TARGETS cy_vysmaw
+  LIBRARY DESTINATION ${PYTHON_SITE}/vysmaw
+  CONFIGURATIONS Release
+  PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE
+              GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+
+install(
+  FILES __init__.py cy_vysmaw.pxd vysmaw.pxd
+  DESTINATION ${PYTHON_SITE}/vysmaw
+  CONFIGURATIONS Release
+  PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)
