--- a/vyssim/CMakeLists.txt
+++ b/vyssim/CMakeLists.txt
@@ -7,6 +7,24 @@ find_package(PkgConfig REQUIRED)
 
 pkg_check_modules(GTHREAD2 REQUIRED gthread-2.0)
 
+# use, i.e. don't skip, the full RPATH for the build tree
+set(CMAKE_SKIP_BUILD_RPATH FALSE)
+
+# when building, don't use the install RPATH already (but later on when
+# installing)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+
+# add the automatically determined parts of the RPATH which point to directories
+# outside the build tree to the install RPATH
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+# the RPATH to be used when installing, but only if it's not a system directory
+list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES
+  "${CMAKE_INSTALL_PREFIX}/lib" isSystemDir)
+if("${isSystemDir}" STREQUAL "-1")
+  set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+endif("${isSystemDir}" STREQUAL "-1")
+
 set(CMAKE_C_FLAGS
   "${CMAKE_C_FLAGS} -Wall -Werror")
 
@@ -26,3 +44,8 @@ target_link_libraries(vyssim
   ${VERBS_LIBRARY}
   ${RDMACM_LIBRARY}
   vys)
+install(TARGETS vyssim
+  RUNTIME DESTINATION bin
+  CONFIGURATIONS Release
+  PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE
+  GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
