Add vys version field to signal messages
vysmaw reads the field and will generate an error message when there is a
version mismatch.

--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -65,6 +65,10 @@ queue_resume_overhead = 100
 # TODO: distinguish latency for data and signal buffers?
 max_starvation_latency = 100
 
+# Maximum number of vys_version mismatch events to wait before sending a
+# VYSMAW_MESSAGE_VERSION_MISMATCH message.
+max_version_mismatch_latency = 1000
+
 #
 # The following are probably best left at their default values, but expert users
 # may find them useful.
