--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(vysmaw)
-set(vysmaw_VERSION_MAJOR 0)
-set(vysmaw_VERSION_MINOR 1)
+set(VYSMAW_VERSION_MAJOR 0)
+set(VYSMAW_VERSION_MINOR 1)
+set(VYSMAW_VERSION_PATCH 0)
+set(VYSMAW_VERSION
+  ${VYSMAW_VERSION_MAJOR}.${VYSMAW_VERSION_MINOR}.${VYSMAW_VERSION_PATCH})
 
 set(
   CMAKE_MODULE_PATH
