Add message for signal message receive queue underflow

--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -48,6 +48,16 @@ signal_message_receive_max_posted = 8000
 # value is 1.
 signal_message_pool_overhead_factor = 2
 
+# Number of work requests on the signal message receive queue at which a
+# VYSMAW_MESSAGE_SIGNAL_RECEIVE_QUEUE_UNDERFLOW message is created and sent to
+# consumer queues. Ideally, this level would be zero, but as there is no signal
+# available from a QP for that event, and can only be inferred by comparing the
+# number of receive requests vs the number of completion queue entries, this
+# level more accurately can be taken to mean that the signal receive queue depth
+# is "dangerously low". A vysmaw application is in danger of missing signal
+# messages when a receive queue underflow occurs.
+signal_message_receive_queue_underflow_level = 100
+
 # vysmaw clients can either connect to a (CBE) sending process (to read spectral
 # data) immediately upon receipt of any signal message from that process, or
 # wait until a signal message is received from the process which matches (one
