Replace max_message_queue_depth with message_queue_alert_depth

--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -77,12 +77,8 @@ eager_connect_idle_sec = 1.0
 # accumulate very quickly, and will take some time to resolve.
 preconnect_backlog = true
 
-# Maximum depth of message queue.
-max_depth_message_queue = 1000
-
-# Overhead needed to resume data flow after message queue overflow.  Operational
-# value will be limited to < max_depth_message_queue.
-queue_resume_overhead = 100
+# Depth of message queue at which an alert message is generated
+message_queue_alert_depth = 4000
 
 # Maximum number of buffer starvation events to wait before sending a
 # VYSMAW_MESSAGE_[DATA|SIGNAL]_BUFFER_STARVATION message.
