Replace queue_resume_overhead with message_queue_alert_interval

--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -80,6 +80,10 @@ preconnect_backlog = true
 # Depth of message queue at which an alert message is generated
 message_queue_alert_depth = 4000
 
+# Interval at which message queue alerts are repeated, expressed as the number of
+# queue messages between alert messages.
+message_queue_alert_interval = 10000
+
 # Maximum number of buffer starvation events to wait before sending a
 # VYSMAW_MESSAGE_[DATA|SIGNAL]_BUFFER_STARVATION message.
 #
