Add buffer pool expiration functionality

--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -14,6 +14,10 @@ spectrum_buffer_pool_size = 10485760
 # size of a spectrum.
 single_spectrum_buffer_pool = true
 
+# Minimum time that a buffer pool is not accessed before its resources will be
+# reclaimed, in seconds.
+spectrum_buffer_pool_min_idle_lifetime_sec = 30
+
 # The maximum expected size in bytes of a single spectrum that the client will
 # receive. Note that all spectra that exceed this size will not be sent to the
 # client, regardless of the result of the client filter predicate. This value is
