--- a/py/CMakeLists.txt
+++ b/py/CMakeLists.txt
@@ -23,6 +23,8 @@ if("${isSystemDir}" STREQUAL "-1")
 endif("${isSystemDir}" STREQUAL "-1")
 
 find_package(Cython)
+set(CYTHON_FLAGS "-I.")
+configure_file(vysmaw.pxd vysmaw.pxd COPYONLY)
 add_cython_target(cy_vysmaw cy_vysmaw.pyx)
 
 include_directories(${PYTHON_INCLUDE_DIRS} ../src)
