Fix up build include directories
Changes better to differentiate between cython and c compiler flags, and to
ensure that current, local versions of include files (.h and .pxd), instead of
installed versions, are being used during the build.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,8 +5,9 @@ include(UseCython)
 include(FindPythonExtensions)
 
 find_package(Cython)
+set(CYTHON_FLAGS -I../../py -I../../src)
 
-include_directories(../py ../src)
+include_directories(../src)
 link_directories(../py ../src)
 
 add_cython_target(sample1 EMBED_MAIN)
