Fix grammar in comments

--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -45,7 +45,7 @@ signal_message_receive_max_posted = 8000
 # of signal messages that are expected to be in use by the vysmaw application
 # through the consumer callbacks while the vysmaw library maintains
 # "signal_message_receive_min_posted" work requests for receiving signal
-# messages. The value of this parameter need not be an integer, but it's minimum
+# messages. The value of this parameter need not be an integer, but its minimum
 # value is 1.
 signal_message_pool_overhead_factor = 2
 
