Replace rdma_read_min_ack_part with rdma_read_min_ack
The number of rdma read requests that can be posted (per connection) appears to
be on the order of 16, which can easily result in acknowledging one completion
at a time for relatively small values of rdma_read_min_ack_part. Replacing the
configuration parameter with a simple number of requests to acknowledge will
likely result in fewer of this sort of bad configuration.

--- a/src/vysmaw.conf
+++ b/src/vysmaw.conf
@@ -125,7 +125,5 @@ signal_receive_min_ack_part = 10
 # automatically reduced by hardware and/or system limitations)
 rdma_read_max_posted = 1000
 
-# rdma read request completions to acknowledge at a time, expressed as a part of
-# the maximum number of posted work requests: minimum number acknowledged will
-# be rdma_read_max_posted / rdma_read_min_ack_part
-rdma_read_min_ack_part = 10
+# rdma read request completions to acknowledge at one time
+rdma_read_min_ack = 16
