Set -ffast-math compile option for vyssim
Not sure that this will help the performance when generating random values, but
it's the hope, and it shouldn't hurt.

--- a/vyssim/CMakeLists.txt
+++ b/vyssim/CMakeLists.txt
@@ -26,7 +26,7 @@ if("${isSystemDir}" STREQUAL "-1")
 endif("${isSystemDir}" STREQUAL "-1")
 
 set(CMAKE_C_FLAGS
-  "${CMAKE_C_FLAGS} -Wall -Werror")
+  "${CMAKE_C_FLAGS} -Wall -Werror -ffast-math")
 
 add_executable(vyssim
   vyssim.c)
