Add explicit glib2 dependency to vyssim

--- a/vyssim/CMakeLists.txt
+++ b/vyssim/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(Verbs REQUIRED)
 find_package(RDMACM REQUIRED)
 find_package(PkgConfig REQUIRED)
 
+pkg_check_modules(GLIB2 REQUIRED glib-2.0)
 pkg_check_modules(GTHREAD2 REQUIRED gthread-2.0)
 
 # use, i.e. don't skip, the full RPATH for the build tree
@@ -32,14 +33,18 @@ add_executable(vyssim
   vyssim.c)
 target_include_directories(vyssim PRIVATE
   ${MPI_C_INCLUDE_PATH}
+  ${GLIB2_INCLUDE_DIRS}
   ${GTHREAD2_INCLUDE_DIRS}
   ../src)
 target_compile_options(vyssim PRIVATE
   ${MPI_C_COMPILE_FLAGS}
+  ${GLIB2_CFLAGS}
+  ${GLIB2_CFLAGS_OTHER}
   ${GTHREAD2_CFLAGS}
   ${GTHREAD2_CFLAGS_OTHER})
 target_link_libraries(vyssim
   ${MPI_C_LIBRARIES}
+  ${GLIB2_LIBRARIES}
   ${GTHREAD2_LIBRARIES}
   ${VERBS_LIBRARY}
   ${RDMACM_LIBRARY}
