Add default cmake debug compiler flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,15 @@ set(CMAKE_C_FLAGS
   "${CMAKE_C_FLAGS} -fno-short-enums")
 set(CMAKE_C_FLAGS_RELEASE
   "${CMAKE_C_FLAGS_RELEASE} -Ofast")
+set(CMAKE_C_FLAGS_DEBUG
+  "${CMAKE_C_FLAGS_DEBUG} -gdwarf-3 -Og")
 
 set(CMAKE_CXX_FLAGS
   "${CMAKE_CXX_FLAGS} -fno-short-enums")
 set(CMAKE_CXX_FLAGS_RELEASE
   "${CMAKE_CXX_FLAGS_RELEASE} -Ofast")
+set(CMAKE_CXX_FLAGS_DEBUG
+  "${CMAKE_CXX_FLAGS_DEBUG} -gdwarf-3 -Og")
 
 add_subdirectory(src)
 add_subdirectory(py)
